updated push with minor fixes

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 structured and what my existing code uses as elements to
                 manipulate.
               </p>
-              <section class="taskButtons">
+              <section class="taskButtons" id="dev-buttons">
                 <a id="sub-contentLink12" class="buttonLeft" href="#bot2_12"
                   >First JSON Test</a
                 >
@@ -364,6 +364,9 @@
           <article class="contentBlocks">
             <h1>Design</h1>
             <section>
+              <div class="imagegrab">
+                <img src="./images/josh_uwu.jpg" id="josh-uwu" />
+              </div>
               <h2>Evaluation 3 reflection</h2>
               <p>
                 In terms of design, we’ve been mostly busy on the videography
@@ -1721,7 +1724,7 @@
               >
               <a
                 class="buttonLeft"
-                href="https://git.fhict.nl/I414915/port1PageTest"
+                href="https://github.com/SuperZeekoe/Sem2_test_pf"
                 target="_blank"
                 >Portfolio Git</a
               >
@@ -1752,6 +1755,15 @@
                 wanted to shoot the first day. We came to the conclusion that I
                 am terrible at drawing.
               </p>
+              <hr />
+              <div class="imagegrab">
+                <img
+                  src="./images/tim_ronin.jpg"
+                  loading="lazy"
+                  id="josh-uwu"
+                />
+              </div>
+              <hr />
               <p>
                 The next day we got started on filming in the Media Lab. From
                 here on out I’ve mostly been the production assistant, lead
@@ -1786,7 +1798,7 @@
                 <iframe
                   width="560"
                   height="315"
-                  src="https://www.youtube.com/embed/PXsUYPC071A"
+                  src="https://www.youtube.com/embed/kAHqdON5-qI"
                   title="YouTube video player"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
