single git link update

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
             <section class="taskButtons">
               <a
                 class="buttonLeft"
-                href="https://git.fhict.nl/I414915/portfolio-semester2"
+                href="https://github.com/SuperZeekoe/Sem2_test_pf"
                 target="_blank"
                 >Portfolio Git</a
               >
