minor html update

--- a/index.html
+++ b/index.html
@@ -704,6 +704,19 @@
                 proceedings, as well as general feedback on our interview.
               </p>
               <p>
+                Besides designing, I was also responsible for some coding parts.
+                I got assigned the "About me" page and the Footer. Besides that
+                I worked together with Yvonne on the "Cart" page, where I
+                created the initial layout and she adjusted things afterwards
+                making it prettier.
+              </p>
+
+              <h3>
+                For my reflection and more information on the coding, please
+                check "Development" -> "Project Coding", through the homepage.
+              </h3>
+
+              <p>
                 For the final report I did not write anything new. The content
                 of me that is in there has been written previously in the
                 project plan or in research documents and copied over into the
